# ampworks

./: .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/: pull_request_template.md
.github/linters/: .codespellrc
.github/workflows/: ci.yml  codecov.yml  release.yml
docs/source/: conf.py  index.rst
docs/source/_static/: switcher.json
docs/source/development/: code_of_conduct.rst
docs/source/examples/: index.rst
docs/source/user_guide/: index.rst  installation.rst  what_is_ampworks.rst
examples/: simple_dQdV_example.py
examples/dqdv_data/: charge2.csv  charge2_smooth.csv  charge3866.csv  charge3866_smooth.csv  gr.csv  nmc.csv
scripts/: version_checker.py
src/ampworks/: __init__.py  _auxiliary.py  _checks.py  labels.py  mathutils.py
src/ampworks/_core/: __init__.py  _dataset.py  _headers.py  _read.py
src/ampworks/datasets/: __init__.py
src/ampworks/datasets/resources/dqdv/: cell1_rough.csv  cell1_smooth.csv  cell2_rough.csv  cell2_smooth.csv  gr_smooth.csv  nmc_smooth.csv
src/ampworks/datasets/resources/hppc/: hppc_discharge.csv
src/ampworks/datasets/resources/ici/: ici_charge.csv  ici_discharge.csv
src/ampworks/dqdv/: __init__.py  _dqdv_fitter.py  _dqdv_spline.py  _lam_lli.py  _tables.py
src/ampworks/dqdv/gui_files/pages/: dqdv_fitting.py  figures.py
src/ampworks/gitt/: _extract_params.py
src/ampworks/hppc/: _extract_impedance.py
src/ampworks/ici/: _extract_params.py
src/ampworks/ocv/: _match_peaks.py
src/ampworks/plotutils/: _bokeh.py  _colors.py  _limits.py  _plotly.py  _text.py  _ticks.py
src/ampworks/utils/: __init__.py  _alphanum_sort.py  _progress_bar.py  _rich_result.py  _rich_table.py  _timer.py
tests/: conftest.py  test_checks.py  test_datasets.py  test_gitt.py  test_ici.py  test_labels.py  test_mathutils.py  test_plotutils.py  test_utils.py
tests/test_core/: dummy.ipynb  test_dataset.py  test_read.py
tests/test_core/dummy_data/: aliases.csv  aliases.txt  aliases.xls  aliases.xlsx  dummy.ipynb  sample.csv  sample.txt  sample.xls  sample.xlsx
tests/test_dqdv/: test_fitter.py
