[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ampworks"
readme = "README.md"
dynamic = ["version"]
description = "Processing and visualization tools for battery experiments."
keywords = ["battery", "data", "analysis", "ICA", "dQdV", "GITT", "ICI"]
requires-python = ">=3.10,<3.15"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Corey R. Randall" },
    { email = "corey.r.randall@gmail.com" },
]
maintainers = [
    { name = "Corey R. Randall" },
    { email = "corey.r.randall@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "tqdm",
    "numpy",
    "pandas",
    "plotly",
    "pyarrow",
    "seaborn",
    "openpyxl",
    "matplotlib",
    "numdifftools",
    "scipy >= 1.13",
]

[project.scripts]
ampworks = "ampworks.cli:main"

[tool.setuptools.dynamic]
version = { attr = "ampworks.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", ".yml", "*.csv", "*.css"]

[project.optional-dependencies]
gui = [
    "dash",
    "dash-ag-grid",
    "dash-extensions",
    "dash-breakpoints",
    "dash-bootstrap-templates",
    "dash-bootstrap-components",
]
docs = [
    "sphinx",
    "myst-nb",
    "numpydoc",
    "sphinx-design",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-xdist",
]
dev = [
    "nox",
    "flake8",
    "autopep8",
    "codespell",
    "genbadge[all]",
    "ampworks[gui,docs,tests]",
]

[project.urls]
Homepage = "https://github.com/NatLabRockies/ampworks"
Documentation = "https://github.com/NatLabRockies/ampworks"
Repository = "https://github.com/NatLabRockies/ampworks"
Issues = "https://github.com/NatLabRockies/ampworks/issues"
